# AgentShell

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.sh  package.json  vite.config.ts
.claude/: DESIGN_SPEC.md  REVIEW.md  TASKS.md
.gstack/plans/: main-plan.md
.gstack/plans/ceo-plans/: 2026-04-01-agentshell-v1.md
.gstack/reviews/: codex-review-2026-04-01.md  design-2026-04-01.md  eng-review-test-plan-2026-04-01.md  reviews.jsonl
src/: App.tsx  ThemeProvider.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: context.rs  executor.rs
src-tauri/src/commands/: agent_commands.rs  error.rs  health_commands.rs  history_commands.rs  mod.rs  profile_commands.rs  recording_commands.rs  sftp_commands.rs  ssh_commands.rs  zmodem_commands.rs
src-tauri/src/health/: mod.rs
src-tauri/src/profile/: store.rs
src-tauri/src/pty/: local.rs
src-tauri/src/recording/: mod.rs
src-tauri/src/session/: manager.rs  mod.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: auth.rs  client.rs
src/components/: AIPanel.tsx  Sidebar.tsx  Terminal.tsx  ThemeSwitcher.tsx
src/components/history/: HistorySearch.tsx
src/components/layout/: TabContextMenu.tsx
src/components/profiles/: ProfileForm.tsx  ProfileList.tsx  QuickConnect.tsx
src/components/settings/: SettingsPanel.tsx
src/components/sftp/: SftpPanel.tsx
src/components/terminal/: TerminalView.tsx
src/hooks/: useTerminal.ts
src/lib/: sessionRecovery.ts  tauri.ts
src/lib/ai/: client.ts  (+1 more)
src/themes/: cyberpunk.ts  industrial.ts  minimal.ts
