[package]
name = "agentshell"
version = "0.1.0"
description = "AgentShell — SSH terminal + AI agent"
authors = ["AgentShell Contributors"]
edition = "2021"
license = "MIT"
default-run = "agentshell"

[lib]
name = "agentshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# SSH
russh = "0.44"
russh-keys = "0.44"

# PTY
portable-pty = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
strip-ansi-escapes = "0.2"
tokio-util = { version = "0.7", features = ["io"] }
once_cell = "1"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# SQLite for command history (FTS5)
rusqlite = { version = "0.31", features = ["bundled"] }

# Zmodem
zmodem2 = "0.2"

# Text processing (ANSI/control-char sanitization for AI context)
regex = "1"

# SFTP subsystem
russh-sftp = "2"

# Timestamps for recording
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Rust-side AI API calls (bypasses WebKit network issues)
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
